# CSCI-545-Final-Project

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  LICENSE  README.md  balance_task.cpp  helper.hpp  initUserGraphics.c  initUserSimulation.c  initUserTasks.c  initUserTasks.c~  sample_task.c  sample_task_cpp.cpp  shift_task.cpp  step_aerobic_task.cpp  stepsequence.hpp  walking_task.cpp
